# wco_baseball

./: All Intrasquads.csv
backend/: .gitignore  pyproject.toml
backend/services/: supabase_client.py
backend/src/: main.py
backend/src/routes/: in_pipeline.py  in_pipline.py  out_pipeline.py
backend/src/services/: calc_new.py  csv_to_json.py  hitter_calc.py  hitter_stats_calc.py  supa_uploader.py  supabase_client.py  upload_helper.py
frontend/: package-lock.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/catchers/: layout.tsx  page.tsx
frontend/app/hitters/: page.tsx
frontend/app/pitchers/: page.tsx
frontend/components/: navbar.tsx
